# rtgb-controller

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.template.toml  docker-compose.yml  rustfmt.toml
.config/: nextest.toml  set-test-env.sh
.github/: ci.config.toml
.github/workflows/: test.yml
.sqlx/: query-466e5c2372b79cf046f7243413e85b48bb277d1e5d72a379a416907b85817ac3.json
app/: Cargo.toml  config.template.toml
app/.sqlx/: query-92bc651ba767d62c749f98bfaa9dfa892b8cb462084634fb23afa2fc14c6dd39.json  query-98536beb6bf5489350c3f55604cd8aefd07920fda400efd60fae69829cba6005.json
app/migrations/: 20250319074803_init.down.sql  20250319074803_init.up.sql
app/src/: main.rs  nats_client.rs
app/src/config/: app_config.rs  mod.rs  nats_config.rs  postgres_config.rs
app/src/inbound/: nats.rs
app/src/inbound/model/: event.rs
app/src/outbound/: mod.rs  nats_publisher.rs  postgres.rs
app/src/outbound/fixtures/: command.sql  session.sql
app/src/utils/: file.rs  mod.rs  pem.rs
app/tests/: mod.rs  nats_helper.rs  postgres_helper.rs  scheduler_test.rs
doc/: overview-rtgb(2).excalidraw  overview.excalidraw  rtgb.excalidraw  sequence-overview.mermaid
docker/: .env.template  docker-compose.yml
docker/nats/: Dockerfile  server.conf  server.template.conf
docker/postgres/: Dockerfile  initdb.sh  pg_hba.conf  postgresql.conf
internal/: Cargo.toml
internal/.config/: nextest.toml
internal/src/core/domain/: command.rs  message.rs
internal/src/core/port/: command.rs  messaging.rs
internal/src/core/service/: message_service.rs
internal/src/domain/: command.rs  error.rs  message.rs  mod.rs  sorting.rs
internal/src/port/: command.rs  messaging.rs  mod.rs  publisher.rs
internal/src/service/: command_executor_service.rs  command_scheduler_service.rs  message_service.rs  mod.rs
src/: main.rs
src/lib/: config.rs  lib.rs
src/lib/config/: config.rs  mod.rs  nats_config.rs  postgres_config.rs
src/lib/core/domain/: command.rs  event.rs  message.rs
src/lib/core/port/: messaging.rs
src/lib/core/service/: message_service.rs
src/lib/inbound/: mod.rs  nats.rs
src/lib/inbound/model/: event.rs
src/lib/outbound/: postgres.rs
src/lib/utils/: certificate.rs  file.rs  mod.rs  pem.rs
