[package]
name = "rtgb-controller"
version = "0.1.0"
edition = "2021"

[lib]
name = "internal"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.7"
async-nats = "0.38.0"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.214", features = ["std", "derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "tls-native-tls",
] }
rustls = "0.23.16"
rustls-pemfile = "2.2"
thiserror = "2.0.1"
time = "0.3.37"
toml = "0.8.19"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
