[package]
name = "rtgb-controller"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["internal", "app"]

[lib]
name = "internal"
path = "internal/src/lib.rs"

[dependencies]
anyhow = "1.0.93"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
thiserror = "2.0.1"
time = "0.3.37"
toml = "0.8.19"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
