[workspace]
members = ["app", "internal"]

[workspace.dependencies]
anyhow = "1.0"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
mockall = "0.13"
mockall_double = "0.3"
thiserror = "2.0"
time = "0.3"
toml = "0.8"
tokio = { version = "1.43", features = ["full"] }
uuid = { version = "1.14", features = ["v4", "serde"] }
