
[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.38.0"
internal = { path = "../internal" }
rustls = "0.23.16"
rustls-pemfile = "2.2"
serde = { version = "1.0.214", features = ["std", "derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "tls-native-tls",
] }
