
[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rtgb-controller"
path = "src/main.rs"

[dependencies]
async-nats = "0.42"
bigdecimal = "0.4"
internal = { path = "../internal" }
rustls = "0.23"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "tls-native-tls",
  "bigdecimal",
  "time",
] }
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["postgres", "nats"] }

anyhow.workspace = true
env_logger.workspace = true
futures.workspace = true
log.workspace = true
time.workspace = true
toml.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
mockall.workspace = true
rcgen = "0.14"
