
[package]
name = "internal"
version = "0.1.0"
edition = "2024"

[lib]
name = "internal"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
env_logger.workspace = true
futures.workspace = true
log.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
mockall.workspace = true
