
[package]
name = "internal"
version = "0.1.0"
edition = "2024"

[lib]
name = "internal"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0"
anyhow.workspace = true
env_logger.workspace = true
futures.workspace = true
log.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
mockall.workspace = true
